feat: 7.1 finished - video
